Fixed layout of bread crumb bar in the file explorer so it doesn't wrap to the next (invisible) line anymore.

--- a/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
+++ b/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
@@ -886,8 +886,10 @@
 	/* explorer bread crumb path input styles */
 	.o-crumb-wrapper{
 		position: relative;
+		overflow-x: hidden; 
 
 		.o-crumbs {
+			white-space: nowrap;
 			position: absolute;
 			top:0;
 			left: ceil($v-unit-size/6 + 2);
